Fixing bug 394086. Pave the way for java applets that are scriptable using NPRuntime. r+sr=cbiesinger@gmx.at